# embedded-project

./: CMakeLists.txt  example5.sim1  main.c  motor.c  motor.h  parking.c  pins.h  ultrasonic.c
main/: main.ino
